Version 0.9.1 "Mohotani" -- Subversion
-----------------

* Added collapse option to bulletmenu, for cases where section header
is used as parents for other content
* Fixed bug with call to post render hook
* Removed a rogue debug message

Version 0.9 "Marquesas" -- Tue Feb 22 2005
-----------------

* Rewrote module API from scratch to make it easier for a module
dev to write modules.  Not only is it now object oriented, it is
also better organized and navigations related functions are
much, much easier.
* Stylesheet URL is now absolute based on root_url in config.php
* Fixed bug with content type changes breaking hierarchy (#000090)
* Fixed bug with start_element in bulletmenu and phplayers
* Fixed bug with css table not having sequence setup correctly (#000093)
* Fixed bugs with auto alias of pages
* Fixed contact form so that it's xhtml compliant (#000096)
* Fixed RSS feeds to use proper content type
* Fixed content type loading so it only loads php files
* Fixed some bugs with handling gifs in ImageManager
* Modified login procedure for a little more security
* Modified install procedure to ask for admin username and password
* Admin dir can now be changed with admin_dir paramater in config.php
* Updated Smarty to 2.6.7 (Jope)

Version 0.8.2 "Taunoa" -- Mon Jan 17 2005
-----------------

* Added wysiwyg body tag callback for making htmlarea work
* Added additional color schemes in CSS Management for overriding
the default theme. (BrumalPat)
* Fixed htaccess.txt to point to a better url
* Fixed hiding/showing of Help boxes
* Fixed link content type so that urls are encoded properly for xhtml
* Fixed handling of attached CSS to WYSIWYGs
* Fixed stylesheet hook to actually send CSS
* Fixed phplayers menu to put CSS in with template CSS so it's easily
cascaded
* Fixed initial database so first user created is not in the admin
group
* Fixed ereg_replace functions in file management (ntro)
* Fixed bug with uploading images in TinyMCE (#000087)